--- a/BuscaMinas.vcxproj
+++ b/BuscaMinas.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="celda.cpp" />
     <ClCompile Include="io.cpp" />
     <ClCompile Include="juego.cpp" />
+    <ClCompile Include="listaJuegos.cpp" />
     <ClCompile Include="listaPosiciones.cpp" />
     <ClCompile Include="listaUndo.cpp" />
     <ClCompile Include="main.cpp" />
@@ -141,6 +142,7 @@
     <ClInclude Include="colors.h" />
     <ClInclude Include="io.h" />
     <ClInclude Include="juego.h" />
+    <ClInclude Include="listaJuegos.h" />
     <ClInclude Include="listaPosiciones.h" />
     <ClInclude Include="listaUndo.h" />
     <ClInclude Include="tablero.h" />
