--- a/BuscaMinas.vcxproj.filters
+++ b/BuscaMinas.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="tablero.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="listaJuegos.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="celda.h">
@@ -57,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="colors.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="listaJuegos.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
