--- a/BuscaMinas.vcxproj.filters
+++ b/BuscaMinas.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClInclude Include="listaJuegos.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="memoryleaks.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
